--- a/HW2/hw2.html
+++ b/HW2/hw2.html
@@ -20,16 +20,16 @@
     </div>
     <div class="about">
             <img src="https://img.shoplineapp.com/media/image_clips/60811bb98a60d74a03808d4d/original.png?1619073977" alt="SHOPLINE">
-        <ul >
-            <a href="">開店服務</a>
-            <a href="">方案費用</a>
-            <a href="">客戶案例</a>
-            <a href="">開店說明會</a>
-            <a href="">開店諮詢</a>
-            <a href="">更多解決方案</a>
-            <a href="">其他資源</a>
-            <a href="" class="freeTry">免費試用</a>
-        </ul>
+        <nav >
+            <a href="#">開店服務</a>
+            <a href="#">方案費用</a>
+            <a href="#">客戶案例</a>
+            <a href="#">開店說明會</a>
+            <a href="#">開店諮詢</a>
+            <a href="#">更多解決方案</a>
+            <a href="#">其他資源</a>
+            <a href="#" class="freeTry">免費試用</a>
+        </nav>
     </div>
     <div class="group">
         <div class="row">
