--- a/index.html
+++ b/index.html
@@ -5,18 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-
-    <style>
-        ul{
-            width: 100%;
-            background-color: rgb(99, 204, 245);
-        }
-    </style>
+    <script src="https://kit.fontawesome.com/896690462a.js" crossorigin="anonymous"></script>
 </head>
 <body>
-    <i class="fa-solid fa-face-smile-horns"></i>
+    
     <h1> 
-        我的作業  </h1>
+        <i class="fa-solid fa-face-smile-wink"></i> 我的作業  </h1>
     <ul>
         <li><a href="https://linyign.github.io/HW2/hw2.html">作業一 SHOPLINE 切版作業</a> </li>
         <li><a href=""></a> 作業二  </li>
