--- a/index.html
+++ b/index.html
@@ -10,10 +10,11 @@
 <body>
     
     <h1> 
-        <i class="fa-solid fa-face-smile-wink"></i> 我的作業  </h1>
+        <i class="fa-solid fa-face-smile-wink"></i> 我的作業  
+    </h1>
     <ul>
-        <li><a href="https://linyign.github.io/HW2/hw2.html">作業一 SHOPLINE 切版作業</a> </li>
-        <li><a href=""></a> 作業二  </li>
+        <li><a href="https://linyign.github.io/hw1.html">作業一 課表作業</a> </li>
+        <li><a href="https://linyign.github.io/HW2/hw2.html"></a> 作業二  SHOPLINE 切版作業</li>
         <li><a href=""></a> 作業三  </li>
         <li><a href=""></a> 作業四  </li>
         <li><a href=""></a> 作業五  </li>
