--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
     </h1>
     <ul>
         <li><a href="https://linyign.github.io/hw1.html">作業一 課表作業</a> </li>
-        <li><a href="https://linyign.github.io/HW2/hw2.html"></a> 作業二  SHOPLINE 切版作業</li>
-        <li><a href=""></a> 作業三  </li>
-        <li><a href=""></a> 作業四  </li>
-        <li><a href=""></a> 作業五  </li>
-        <li><a href=""></a> 作業六  </li>
+        <li><a href="https://linyign.github.io/HW2/hw2.html">作業二  SHOPLINE 切版作業</a> </li>
+        <li><a href="">作業三 </a></li>
+        <li><a href="">作業四 </a></li>
+        <li><a href="">作業五 </a></li>
+        <li><a href="">作業六 </a></li>
     </ul>
 </body>
 </html>
