--- a/HW2/hw2.html
+++ b/HW2/hw2.html
@@ -6,11 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.0/css/all.min.css" integrity="sha512-10/jx2EXwxxWqCLX/hHth/vu2KY3jCF70dCQB8TSgNjbCVAC/8vai53GfMDrO2Emgwccf2pJqxct9ehpzG+MTw=="
-        crossorigin="anonymous" referrerpolicy="no-referrer"/>
+    crossorigin="anonymous" referrerpolicy="no-referrer"/>
+    <link rel="shortcut icon" href="/images/favicon.png" type="image/x-icon">
     <link rel="stylesheet" href="hw2style.css">
 </head>
 <body>
-    <div class="first1">
+    <div class="enter">
         <i class="fa-solid fa-globe"></i>
         <span class="line">|</span>
         <span >
@@ -21,23 +22,23 @@
     <div class="about">
             <img src="https://img.shoplineapp.com/media/image_clips/60811bb98a60d74a03808d4d/original.png?1619073977" alt="SHOPLINE">
         <nav >
-            <a href="#">開店服務</a>
-            <a href="#">方案費用</a>
-            <a href="#">客戶案例</a>
-            <a href="#">開店說明會</a>
-            <a href="#">開店諮詢</a>
-            <a href="#">更多解決方案</a>
-            <a href="#">其他資源</a>
-            <a href="#" class="freeTry">免費試用</a>
+            <a href="">開店服務</a>
+            <a href="">方案費用</a>
+            <a href="">客戶案例</a>
+            <a href="">開店說明會</a>
+            <a href="">開店諮詢</a>
+            <a href="">更多解決方案</a>
+            <a href="">其他資源</a>
+            <a href="" class="freeTry">免費試用</a>
         </nav>
     </div>
     <div class="group">
         <div class="row">
             <div class="txt">
-                <h1 style="color: #fff;">想在哪開店創業? <br> 
-                    <span style="color:green">門市必備零售POS系統</span> 
+                <h1 >想在哪開店創業? <br> 
+                    <span >門市必備零售POS系統</span> 
                 </h1> 
-                <h2  style="color: #fff;">超過 35 萬品牌使用！從個人賣家到國際品牌，都能以 SHOPLINE 實現全通路零售，快速拓展市場到世界各地，輕鬆開始你的『 店 』商生意！
+                <h2  >超過 35 萬品牌使用！從個人賣家到國際品牌，都能以 SHOPLINE 實現全通路零售，快速拓展市場到世界各地，輕鬆開始你的『 店 』商生意！
                 </h2>
                 <input type="email" placeholder="請在此輸入電子信箱(可隨時更換)">
                 <a href="" >免費試用</a>
@@ -133,7 +134,7 @@
         </div>
     </div>
     <div class="function">
-        <h1>更多功能與服務</h1>
+        <h2>更多功能與服務</h2>
         <div class="serve">
             <div class="inserve">
                 <img src="https://img.shoplineapp.com/media/image_clips/5efef5c3b774cf002ab000ce/original.png?1593767363" alt="強大庫存及訂單系統">
@@ -170,7 +171,7 @@
     <div class="brand">
         <div class="recommend">
             <!-- <div class="txt">  -->
-                <h1>人氣品牌一致推薦使用</h1>
+                <h2>人氣品牌一致推薦使用</h2>
             <!-- </div>  -->
             <div class="pic"><img src="BONNY.PNG" alt="bonny" width="200px" height="146px"></div>
             <div class="pic"><img src="NUT.PNG" alt="團圓堅果"  width="200px" height="146px"></div>
@@ -196,98 +197,99 @@
             <p>全亞洲超過 <br> 350,000個品牌都在使用SHOPLINE</p>
             <li>免費試用14天 →</li>
         </div>
-        <div class="footimg">
-            <img src="https://img.shoplineapp.com/media/image_clips/609d0f5c33fdc6001aa95da6/original.png?1620905820" width="600px" height="300px" >
-        </div>
     </div>
-    <div class="footer">
-        <div class="footercol">
-            <h4>SHOPLINE</h4>
-        <ul>
-            <li><a href="">關於我們</a></li>
-            <li><a href="">認識團隊</a></li>
-            <li><a href="">人才招募</a></li>
-            <li><a href="">合作機會</a></li>
-            <li><a href="">精選夥伴</a></li>
-            <li><a href="">媒體報導</a></li>
-        </ul>
-        </div>
-        <div class="footercol">
-            <h4>我要開店</h4>
-            <ul>
-                <li><a href="">方案費用</a></li>
-                <li><a href="">功能模組</a></li>
-                <li><a href="">客戶案例</a></li>
-                <li><a href="">開店說明</a></li>
-                <li><a href="">開店諮詢</a></li>
-            </ul>
-        </div>
-        <div class="footercol">
-            <h4>功能特色</h4>
-            <ul>
-                <li><a href="">網路開店</a></li>
-                <li><a href="">社群購物</a></li>
-                <li><a href="">零售POS</a></li>
-                <li><a href="">網路商店</a></li>
-                <li><a href="">網站製作</a></li>
-                <li><a href="">店商物流</a></li>
-                <li><a href="">訂單管理</a></li>
-                <li><a href="">一頁商店</a></li>
-            </ul>
-        </div>
-        <div class="footercol">
-            <h4>開店資訊</h4>
-            <ul>
-                <li><a href="">開店密技</a></li>
-                <li><a href="">版型主題</a></li>
-                <li><a href="">新手問答</a></li>
-                <li><a href="">POS硬體</a></li>
-                <li><a href="">最新功能</a></li>
-            </ul>
-        </div>
-        <div class="footercol">
-            <h4>更多解決方案</h4>
-            <ul>
-                <li><a href="">企業旗艦方案</a></li>
-                <li><a href="">跨境電商方案</a></li>
-                <li><a href="">廣告計劃方案</a></li>
-            </ul>
-        </div>
-        <div class="footercolspecial">
-            <h4>其他資源</h4>
-            <ul>
-                <li><a href="">電商教室</a></li>
-                <li><a href="">充電工作坊</a></li>
-                <li><a href="">DreamBig創品牌</a></li>
-                <li><a href="">電商成長學苑</a></li>
-                <li><a href="">SHOPLINE TRENDS 電商數據庫</a></li>
-                <li><a href="">LINE 官方帳號</a></li>
-            </ul>
-        </div>
-        <div class="footercol">
-            <h4>應用案例</h4>
-            <ul>
-                <li><a href="">SHOPLINE Payments</a></li>
-                <li><a href="">網紅口碑行銷方案</a></li>
-                <li><a href="">實體零售</a></li>
-                <li><a href="">IG直播+1</a></li>
-                <li><a href="">社群電商工具包</a></li>
-            </ul>
+    <section class="section">
+        <div class="footerwrap">
+            <div class="footerlist">
+                <div class="footercol">
+                    <h4>SHOPLINE</h4>
+                <ul>
+                    <li><a href="">關於我們</a></li>
+                    <li><a href="">認識團隊</a></li>
+                    <li><a href="">人才招募</a></li>
+                    <li><a href="">合作機會</a></li>
+                    <li><a href="">精選夥伴</a></li>
+                    <li><a href="">媒體報導</a></li>
+                </ul>
+                </div>
+                <div class="footercol">
+                    <h4>我要開店</h4>
+                    <ul>
+                        <li><a href="">方案費用</a></li>
+                        <li><a href="">功能模組</a></li>
+                        <li><a href="">客戶案例</a></li>
+                        <li><a href="">開店說明</a></li>
+                        <li><a href="">開店諮詢</a></li>
+                    </ul>
+                </div>
+                <div class="footercol">
+                    <h4>功能特色</h4>
+                    <ul>
+                        <li><a href="">網路開店</a></li>
+                        <li><a href="">社群購物</a></li>
+                        <li><a href="">零售POS</a></li>
+                        <li><a href="">網路商店</a></li>
+                        <li><a href="">網站製作</a></li>
+                        <li><a href="">店商物流</a></li>
+                        <li><a href="">訂單管理</a></li>
+                        <li><a href="">一頁商店</a></li>
+                    </ul>
+                </div>
+                <div class="footercol">
+                    <h4>開店資訊</h4>
+                    <ul>
+                        <li><a href="">開店密技</a></li>
+                        <li><a href="">版型主題</a></li>
+                        <li><a href="">新手問答</a></li>
+                        <li><a href="">POS硬體</a></li>
+                        <li><a href="">最新功能</a></li>
+                    </ul>
+                </div>
+                <div class="footercol">
+                    <h4>更多解決方案</h4>
+                    <ul>
+                        <li><a href="">企業旗艦方案</a></li>
+                        <li><a href="">跨境電商方案</a></li>
+                        <li><a href="">廣告計劃方案</a></li>
+                    </ul>
+                </div>
+                <div class="footercolspecial">
+                    <h4>其他資源</h4>
+                    <ul>
+                        <li><a href="">電商教室</a></li>
+                        <li><a href="">充電工作坊</a></li>
+                        <li><a href="">DreamBig創品牌</a></li>
+                        <li><a href="">電商成長學苑</a></li>
+                        <li><a href="">SHOPLINE TRENDS 電商數據庫</a></li>
+                        <li><a href="">LINE 官方帳號</a></li>
+                    </ul>
+                </div>
+                <div class="footercol">
+                    <h4>應用案例</h4>
+                    <ul>
+                        <li><a href="">SHOPLINE Payments</a></li>
+                        <li><a href="">網紅口碑行銷方案</a></li>
+                        <li><a href="">實體零售</a></li>
+                        <li><a href="">IG直播+1</a></li>
+                        <li><a href="">社群電商工具包</a></li>
+                    </ul>
+                </div>
+            </div>
         </div>
         <div class="C19">
             <div class="COVID-19">
                 <a href="">COVID-19應變措施</a>
-                </div>
+            </div>
         </div>
         <div class="footerbom">
             <div class="copy">
                 <ul>
                     <li>網站地圖</li>
-                    <li class="private">隱私權政策</li>
-                    <li class="private">會員條款</li>
+                    <li class="private">|  隱私權政策</li>
+                    <li class="private">|  會員條款</li>
                 </ul>
             </div>
-            <div class="copy">
+            <div class="copyimg">
                 <img src="img1.png" alt="Facebook" width="60" height="60">
                 <img src="img2.png" alt="Linked in" width="60" height="60">
                 <img src="img3.png" alt="Instagram" width="60" height="60">
@@ -295,13 +297,15 @@
                 <img src="img5.png" alt="Line" width="60" height="60">
                 <img src="img6.png" alt="email" width="60" height="60">
             </div>
-            <div class="copy">
+            <div class="copyp">
                 <p>
                     服務時間 星期一至五 上午 10 點至晚上 7 點 <br>
                     ©Copyright 2013-22 SHOPLINE Limited.
                 </p> 
             </div>
         </div>
-    </div>
+    </section>
+
 </body>
+
 </html>
