--- a/HW2/hw2.html
+++ b/HW2/hw2.html
@@ -4,23 +4,26 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>hw2Document</title>
+    <!-- <link rel="stylesheet" href="reset.css"> -->
+    <link rel="stylesheet" href="hw2style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.0/css/all.min.css" integrity="sha512-10/jx2EXwxxWqCLX/hHth/vu2KY3jCF70dCQB8TSgNjbCVAC/8vai53GfMDrO2Emgwccf2pJqxct9ehpzG+MTw=="
     crossorigin="anonymous" referrerpolicy="no-referrer"/>
     <link rel="shortcut icon" href="/images/favicon.png" type="image/x-icon">
-    <link rel="stylesheet" href="hw2style.css">
 </head>
 <body>
     <div class="enter">
-        <i class="fa-solid fa-globe"></i>
-        <span class="line">|</span>
-        <span >
-            <a href="" >幫助中心</a>
-            <a href="" >登入網站</a>
-        </span>
+        <div class="sign">
+            <i class="fa-solid fa-globe"></i>
+            <span >
+                <a href="" >|   幫助中心</a>
+                <a href="" >登入網站</a>
+            </span>
+        </div>
     </div>
     <div class="about">
-            <img src="https://img.shoplineapp.com/media/image_clips/60811bb98a60d74a03808d4d/original.png?1619073977" alt="SHOPLINE">
+        <img src="SHOPLINE.PNG  "  alt="SHOPLINE">
+            <!-- <img src="https://img.shoplineapp.com/media/image_clips/60811bb98a60d74a03808d4d/original.png?1619073977" alt="SHOPLINE"> -->
         <nav >
             <a href="">開店服務</a>
             <a href="">方案費用</a>
@@ -44,130 +47,199 @@
                 <a href="" >免費試用</a>
             </div>
             <div class="pic">
+                <!-- <img src="big.PNG" alt="門市必備零售POS系統"> -->
                 <img src="https://shoplineimg.com/59c0fd06080f0690b5000cd1/6191b397e9f2f00026722389/505x.webp?source_format=png">
             </div>
         </div>
     </div>
-    <div class="intitle">
-        <h1 >
-            單一平台就能助你 <br> 在全通路輕鬆開店創業
-        </h1>
-        <p>從網路商店架站到實體門市管理，只需要一個平台，就能輕鬆實現開店創業，
-            <br> 並能同步管理所有銷售管道，SHOPLINE 助你賣得更多、賣得更好！</p>
-    </div>
-    <div class="ingroup">
-        <div class="inrow">
-            <div class="inpic">
-                <img src="https://shoplineimg.com/59c0fd06080f0690b5000cd1/60b0c566ec23b10026db7112/565x.webp?source_format=png">
-            </div>
-            <div class="intxt">
-                <h2>免寫程式、多款版型 <br> 輕鬆打造全能電商網站</h2>
-                <p>不會寫程式也能輕鬆架設品牌電商官網！任何產業都能找到合適的專業設計版型，以滑鼠拖曳就能完成網頁編輯，讓架設網站就像堆積木一樣簡單。</p>
-                <div class="list">
-                    <div>豐富版型主題與字型搭配</div>
-                    <div>RWD 響應式網頁設計</div>
-                    <div>獨有網址 ＆ SSL 安全憑證</div>
-                    <div>SEO 搜尋引擎優化</div>
-                    <div>一頁商店</div>
-                    <div>開放 HTML／CSS 編輯</div>
+    <section class="home-intitle">
+        <div class="intitle">
+            <h2 >
+                單一平台就能助你 <br> 在全通路輕鬆開店創業
+            </h2>
+            <p>從網路商店架站到實體門市管理，只需要一個平台，就能輕鬆實現開店創業，<br> 並能同步管理所有銷售管道，SHOPLINE 助你賣得更多、賣得更好！</p>
+        </div>
+        <div class="ingroup">
+            <div class="inrow">
+                <div class="inpic">
+                    <img src="https://shoplineimg.com/59c0fd06080f0690b5000cd1/60b0c566ec23b10026db7112/565x.webp?source_format=png">
                 </div>
-                <a href="" >看看開店密技 →</a>
+                <div class="intxt">
+                    <h2>免寫程式、多款版型 <br> 輕鬆打造全能電商網站</h2>
+                    <p>不會寫程式也能輕鬆架設品牌電商官網！任何產業都能找到合適的專業設計版型，以滑鼠拖曳就能完成網頁編輯，讓架設網站就像堆積木一樣簡單。</p>
+                    <ul class="list">
+                        <li>
+                            <i class="fa-solid fa-circle-check"></i>
+                            豐富版型主題與字型搭配
+                        </li>
+                        <li>
+                            <i class="fa-solid fa-circle-check"></i>
+                            RWD 響應式網頁設計
+                        </li>
+                        <li>
+                            <i class="fa-solid fa-circle-check"></i>
+                            獨有網址 ＆ SSL 安全憑證
+                        </li>
+                        <li>
+                            <i class="fa-solid fa-circle-check"></i>
+                            SEO 搜尋引擎優化
+                        </li>
+                        <li>
+                            <i class="fa-solid fa-circle-check"></i>
+                            一頁商店
+                        </li>
+                        <li>
+                            <i class="fa-solid fa-circle-check"></i>
+                            開放 HTML／CSS 編輯
+                        </li>
+                    </ul>
+                    <a href="" >看看開店密技 →</a>
+                </div>
+            </div>
+    
+            <div class="inrow">
+                <div class="inpic">
+                    <img src="https://img.shoplineapp.com/media/image_clips/60a4d354a8bff100235bea59/original.png?1621414740" width="700" height="411"  >
+                </div>
+                <div class="intxt">
+                    <h2>支持海內外電商 <br>
+                        金流、物流一次搞定</h2>
+                    <p>支持在地及國際金流、物流串接服務，提供海內外顧客最便利的付款及送貨服務，加速消費者完成下單交易，大幅降低購物車放棄率！</p>
+                    <ul class="list">
+                        <li>
+                            <i class="fa-solid fa-circle-check"></i>
+                            線上信用卡刷卡
+                        </li>
+                        <li>
+                            <i class="fa-solid fa-circle-check"></i>
+                            第三方金流／行動支付整合
+                        </li>
+                        <li>
+                            <i class="fa-solid fa-circle-check"></i>
+                            超商代碼／條碼繳費
+                        </li>
+                        <li>
+                            <i class="fa-solid fa-circle-check"></i>
+                            多溫層宅配並指定運費
+                        </li>
+                        <li>
+                            <i class="fa-solid fa-circle-check"></i>
+                            超商／宅配貨到付款
+                        </li>
+                        <li>
+                            <i class="fa-solid fa-circle-check"></i>
+                            發票開立與串接
+                        </li>
+                    </ul>
+                    <a href="">了解更多金物流 →</a>
+                </div>
+            </div>
+            <div class="inrow">
+                <div class="inpic">
+                    <img src="https://img.shoplineapp.com/media/image_clips/60a4d354df356c0012a8a223/original.png?1621414740" width="700" height="411" >
+                </div>
+                <div class="intxt">
+                    <h2>刺激下單，創造回購 <br>
+                        行銷導流、促購模組任你玩</h2>
+                    <p>多元優惠活動、會員集客機制、網紅分潤以及直播購物等豐富功能，將電商行銷玩法一網打盡，助你成功優化行銷活動成效，刺激顧客下單、吸引鐵粉回購！</p>
+                    <ul class="list">
+                        <li>
+                            <i class="fa-solid fa-circle-check"></i>
+                            超過 20 種優惠促銷功能</li>
+                        <li>
+                            <i class="fa-solid fa-circle-check"></i>
+                            社群直播購物系統</li>
+                        <li>
+                            <i class="fa-solid fa-circle-check"></i>
+                            會員分級／點數／購物金</li>
+                        <li>
+                            <i class="fa-solid fa-circle-check"></i>
+                            Facebook／Google／LINE 廣告追蹤</li>
+                        <li>
+                            <i class="fa-solid fa-circle-check"></i>Instagram 購物功能
+                        </li>
+                        <li>
+                            <i class="fa-solid fa-circle-check"></i>
+                            Facebook／Instagram／LINE 對話式購物
+                        </li>
+                    </ul>
+                    <a href="">看更多優惠模組 →</a>
+                </div>
+            </div>
+            <div class="inrow">
+                <div class="inpic">
+                    <img src="https://img.shoplineapp.com/media/image_clips/60a4d3540289ef002f2150cb/original.png?1621414740" width="700" height="411">
+                </div>
+                <div class="intxt">
+                    <h2>O2O 全通路無縫整併 <br>
+                        輕鬆管理網店、門市以及其他通路</h2>
+                    <p>不論是網店拓展門市，還是門市想發展網路生意，從商品、庫存、訂單等各項虛實店舖的資料都能完善整併，輕鬆實現全通路會員經營到多店營運。</p>
+                    <ul class="list">
+                        <li>
+                            <i class="fa-solid fa-circle-check"></i>
+                            門市 POS 系統</li>
+                        <li>
+                            <i class="fa-solid fa-circle-check"></i>
+                            線上線下會員／商品／庫存整合</li>
+                        <li>
+                            <i class="fa-solid fa-circle-check"></i>
+                            門市快速集客工具</li>
+                        <li>
+                            <i class="fa-solid fa-circle-check"></i>
+                            O2O 即時銷售報表分析</li>
+                        <li>
+                            <i class="fa-solid fa-circle-check"></i>
+                            進銷庫存／調撥／多店管理</li>
+                        <li>
+                            <i class="fa-solid fa-circle-check"></i>
+                            串接 Shopee 蝦皮購物庫存</li>
+                    </ul>
+                    <a href="">了解更多全通路整合 →</a>
+                </div>
             </div>
         </div>
-
-        <div class="inrow">
-            <div class="inpic">
-                <img src="https://img.shoplineapp.com/media/image_clips/60a4d354a8bff100235bea59/original.png?1621414740" width="700" height="411"  >
-            </div>
-            <div class="intxt">
-                <h2>支持海內外電商 <br>
-                    金流、物流一次搞定</h2>
-                <p>支持在地及國際金流、物流串接服務，提供海內外顧客最便利的付款及送貨服務，加速消費者完成下單交易，大幅降低購物車放棄率！</p>
-                <div class="list">
-                    <div>線上信用卡刷卡</div>
-                    <div>第三方金流／行動支付整合</div>
-                    <div>超商代碼／條碼繳費</div>
-                    <div>多溫層宅配並指定運費</div>
-                    <div>超商／宅配貨到付款</div>
-                    <div>發票開立與串接</div>
-                </div>
-                <a href="">了解更多金物流 →</a>
-            </div>
-        </div>
-        <div class="inrow">
-            <div class="inpic">
-                <img src="https://img.shoplineapp.com/media/image_clips/60a4d354df356c0012a8a223/original.png?1621414740" width="700" height="411" >
-            </div>
-            <div class="intxt">
-                <h2>刺激下單，創造回購 <br>
-                    行銷導流、促購模組任你玩</h2>
-                <p>多元優惠活動、會員集客機制、網紅分潤以及直播購物等豐富功能，將電商行銷玩法一網打盡，助你成功優化行銷活動成效，刺激顧客下單、吸引鐵粉回購！</p>
-                <div class="list">
-                    <div>超過 20 種優惠促銷功能</div>
-                    <div>社群直播購物系統</div>
-                    <div>會員分級／點數／購物金</div>
-                    <div>Facebook／Google／LINE 廣告追蹤</div>
-                    <div>Instagram 購物功能</div>
-                    <div>Facebook／Instagram／LINE 對話式購物</div>
-                </div>
-                <a href="">看更多優惠模組 →</a>
-            </div>
-        </div>
-        <div class="inrow">
-            <div class="inpic">
-                <img src="https://img.shoplineapp.com/media/image_clips/60a4d3540289ef002f2150cb/original.png?1621414740" width="700" height="411">
-            </div>
-            <div class="intxt">
-                <h2>O2O 全通路無縫整併 <br>
-                    輕鬆管理網店、門市以及其他通路</h2>
-                <p>不論是網店拓展門市，還是門市想發展網路生意，從商品、庫存、訂單等各項虛實店舖的資料都能完善整併，輕鬆實現全通路會員經營到多店營運。</p>
-                <div class="list">
-                    <div>門市 POS 系統</div>
-                    <div>線上線下會員／商品／庫存整合</div>
-                    <div>門市快速集客工具</div>
-                    <div>O2O 即時銷售報表分析</div>
-                    <div>進銷庫存／調撥／多店管理</div>
-                    <div>串接 Shopee 蝦皮購物庫存</div>
-                </div>
-                <a href="">了解更多全通路整合 →</a>
-            </div>
-        </div>
-    </div>
-    <div class="function">
+    </section>
+    <section class="function">
         <h2>更多功能與服務</h2>
         <div class="serve">
             <div class="inserve">
-                <img src="https://img.shoplineapp.com/media/image_clips/5efef5c3b774cf002ab000ce/original.png?1593767363" alt="強大庫存及訂單系統">
+                <img src="function1.png" alt="強大庫存及訂單系統">
+                <!-- <img src="https://img.shoplineapp.com/media/image_clips/5efef5c3b774cf002ab000ce/original.png?1593767363" alt="強大庫存及訂單系統"> -->
                 <h3>強大庫存及訂單系統</h3>
                 <p class="inp">從商品數量、貨況到訂單付款狀態、物流貨態一目瞭然 ，提升營運效率超有感。</p>
             </div>
             <div class="inserve">
-                <img src="https://img.shoplineapp.com/media/image_clips/5efef5c4b774cf0027b00084/original.png?1593767364" alt="即時化商店業績分析">
+                <img src="function2.png" alt="即時化商店業績分析">
+                <!-- <img src="https://img.shoplineapp.com/media/image_clips/5efef5c4b774cf0027b00084/original.png?1593767364" alt="即時化商店業績分析"> -->
                 <h3>即時化商店業績分析</h3>
                 <p class="inp">圖表化報表助你一手掌握商店概況，讓數據助攻企業成長，營運策略更有方向。</p>
             </div>
             <div class="inserve">
-                <img src="https://img.shoplineapp.com/media/image_clips/5f34a2e10225e00039a716b9/original.png?1597285089" alt="多國語系、幣值切換">
+                <img src="function3.png" alt="多國語系、幣值切換">
+                <!-- <img src="https://img.shoplineapp.com/media/image_clips/5f34a2e10225e00039a716b9/original.png?1597285089" alt="多國語系、幣值切換"> -->
                 <h3>多國語系、幣值切換</h3>
                 <p class="inp">想做跨境電商也ＯＫ！提供語言、幣別、稅金等進階功能，友善應對海外消費需求。</p>
             </div class="inserve">
             <div class="inserve">
-                <img src="https://img.shoplineapp.com/media/image_clips/5f34a2e11468c4003c7aace6/original.png?1597285089" alt="專業顧問線上支援">
+                <img src="function4.png" alt="專業顧問線上支援">
+                <!-- <img src="https://img.shoplineapp.com/media/image_clips/5f34a2e11468c4003c7aace6/original.png?1597285089" alt="專業顧問線上支援"> -->
                 <h3>專業顧問線上支援</h3>
                 <p class="inp">迅速、透明的溝通管道，協助你快速解決從線上到線下、從在地到海外的網店疑難。</p>
             </div >
             <div class="inserve">
-                <img src="https://img.shoplineapp.com/media/image_clips/5f34a2e11468c472e47aa8e9/original.png?1597285089" alt="廣告行銷加值服務">
+                <img src="function5.png" alt="廣告行銷加值服務">
+                <!-- <img src="https://img.shoplineapp.com/media/image_clips/5f34a2e11468c472e47aa8e9/original.png?1597285089" alt="廣告行銷加值服務"> -->
                 <h3>廣告行銷加值服務</h3>
                 <p class="inp">由官方認證的專業投手團隊，協助品牌投遞Facebook、Google、LINE 等廣告。</p>
             </div>
             <div class="inserve">
-                <img src="https://img.shoplineapp.com/media/image_clips/5f34a2e16200760045e6138f/original.png?1597285089" alt="老闆專屬成長社群">
+                <img src="function6.png" alt="老闆專屬成長社群">
+                <!-- <img src="https://img.shoplineapp.com/media/image_clips/5f34a2e16200760045e6138f/original.png?1597285089" alt="老闆專屬成長社群"> -->
                 <h3>老闆專屬成長社群</h3>
                 <p class="inp">致力為品牌店家打造能深度交流且互助的生態體系，是拓展人脈、商機的絕佳場域。</p>
             </div>
         </div>
-    </div>
+    </section>
     <div class="brand">
         <div class="recommend">
             <!-- <div class="txt">  -->
@@ -192,10 +264,12 @@
             </div>
         </div>
     </div>
-    <div class="end">
-        <div class="footp">
-            <p>全亞洲超過 <br> 350,000個品牌都在使用SHOPLINE</p>
-            <li>免費試用14天 →</li>
+    <div class="asia">
+        <div class="asiafooter">
+            <div class="footp">
+                <p>全亞洲超過 <br> 350,000個品牌都在使用SHOPLINE</p>
+                <li>免費試用14天 →</li>
+            </div>
         </div>
     </div>
     <section class="section">
