--- a/HW2/hw2.html
+++ b/HW2/hw2.html
@@ -17,8 +17,8 @@
             <div class="sign">
                 <i class="fa-solid fa-globe"></i>
                 <span >
-                    <a href="" >|   幫助中心</a>
-                    <a href="" >登入網站</a>
+                    <a href="#" >|   幫助中心</a>
+                    <a href="#" >登入網站</a>
                 </span>
             </div>
         </div>
@@ -26,14 +26,14 @@
             <img src="SHOPLINE.PNG  "  alt="SHOPLINE">
                 <!-- <img src="https://img.shoplineapp.com/media/image_clips/60811bb98a60d74a03808d4d/original.png?1619073977" alt="SHOPLINE"> -->
             <nav >
-                <a href="">開店服務</a>
-                <a href="">方案費用</a>
-                <a href="">客戶案例</a>
-                <a href="">開店說明會</a>
-                <a href="">開店諮詢</a>
-                <a href="">更多解決方案</a>
-                <a href="">其他資源</a>
-                <a href="" class="freeTry">免費試用</a>
+                <a href="#">開店服務</a>
+                <a href="#">方案費用</a>
+                <a href="#">客戶案例</a>
+                <a href="#">開店說明會</a>
+                <a href="#">開店諮詢</a>
+                <a href="#">更多解決方案</a>
+                <a href="#">其他資源</a>
+                <a href="#" class="freeTry">免費試用</a>
             </nav>
         </div>
         <div class="banner">
@@ -45,7 +45,7 @@
                     <p>超過 35 萬品牌使用！從個人賣家到國際品牌，都能以 SHOPLINE 實現全通路零售，快速拓展市場到世界各地，輕鬆開始你的『 店 』商生意！
                     </p>
                     <input type="email" placeholder="請在此輸入電子信箱(可隨時更換)">
-                    <a href="" >免費試用</a>
+                    <a href="#" >免費試用</a>
                 </div>
                 <div class="pic">
                     <!-- <img src="big.PNG" alt="門市必備零售POS系統"> -->
@@ -95,7 +95,7 @@
                             開放 HTML／CSS 編輯
                         </li>
                     </ul>
-                    <a href="" >看看開店密技 →</a>
+                    <a href="#" >看看開店密技 →</a>
                 </div>
             </div>
     
@@ -133,7 +133,7 @@
                             發票開立與串接
                         </li>
                     </ul>
-                    <a href="">了解更多金物流 →</a>
+                    <a href="#">了解更多金物流 →</a>
                 </div>
             </div>
             <div class="inrow">
@@ -165,7 +165,7 @@
                             Facebook／Instagram／LINE 對話式購物
                         </li>
                     </ul>
-                    <a href="">看更多優惠模組 →</a>
+                    <a href="#">看更多優惠模組 →</a>
                 </div>
             </div>
             <div class="inrow">
@@ -196,7 +196,7 @@
                             <i class="fa-solid fa-circle-check"></i>
                             串接 Shopee 蝦皮購物庫存</li>
                     </ul>
-                    <a href="">了解更多全通路整合 →</a>
+                    <a href="#">了解更多全通路整合 →</a>
                 </div>
             </div>
         </div>
@@ -255,7 +255,7 @@
         </div>
         <div class="pop">
             <div class="inshow">
-                <a href="">bonnyread.com.tw →</a>
+                <a href="#">bonnyread.com.tw →</a>
                 <p>
                 SHOPLINE再行動裝置上超做的順暢度很高;使用者給的建議與意見會採納，處理的速度也不錯;還一直有新功能推出，不斷成長。
                 </p>
@@ -281,81 +281,81 @@
                     <div class="footercol">
                         <h4>SHOPLINE</h4>
                     <ul>
-                        <li><a href="">關於我們</a></li>
-                        <li><a href="">認識團隊</a></li>
-                        <li><a href="">人才招募</a></li>
-                        <li><a href="">合作機會</a></li>
-                        <li><a href="">精選夥伴</a></li>
-                        <li><a href="">媒體報導</a></li>
+                        <li><a href="#">關於我們</a></li>
+                        <li><a href="#">認識團隊</a></li>
+                        <li><a href="#">人才招募</a></li>
+                        <li><a href="#">合作機會</a></li>
+                        <li><a href="#">精選夥伴</a></li>
+                        <li><a href="#">媒體報導</a></li>
                     </ul>
                     </div>
                     <div class="footercol">
                         <h4>我要開店</h4>
                         <ul>
-                            <li><a href="">方案費用</a></li>
-                            <li><a href="">功能模組</a></li>
-                            <li><a href="">客戶案例</a></li>
-                            <li><a href="">開店說明</a></li>
-                            <li><a href="">開店諮詢</a></li>
+                            <li><a href="#">方案費用</a></li>
+                            <li><a href="#">功能模組</a></li>
+                            <li><a href="#">客戶案例</a></li>
+                            <li><a href="#">開店說明</a></li>
+                            <li><a href="#">開店諮詢</a></li>
                         </ul>
                     </div>
                     <div class="footercol">
                         <h4>功能特色</h4>
                         <ul>
-                            <li><a href="">網路開店</a></li>
-                            <li><a href="">社群購物</a></li>
-                            <li><a href="">零售POS</a></li>
-                            <li><a href="">網路商店</a></li>
-                            <li><a href="">網站製作</a></li>
-                            <li><a href="">店商物流</a></li>
-                            <li><a href="">訂單管理</a></li>
-                            <li><a href="">一頁商店</a></li>
+                            <li><a href="#">網路開店</a></li>
+                            <li><a href="#">社群購物</a></li>
+                            <li><a href="#">零售POS</a></li>
+                            <li><a href="#">網路商店</a></li>
+                            <li><a href="#">網站製作</a></li>
+                            <li><a href="#">店商物流</a></li>
+                            <li><a href="#">訂單管理</a></li>
+                            <li><a href="#">一頁商店</a></li>
                         </ul>
                     </div>
                     <div class="footercol">
                         <h4>開店資訊</h4>
                         <ul>
-                            <li><a href="">開店密技</a></li>
-                            <li><a href="">版型主題</a></li>
-                            <li><a href="">新手問答</a></li>
-                            <li><a href="">POS硬體</a></li>
-                            <li><a href="">最新功能</a></li>
+                            <li><a href="#">開店密技</a></li>
+                            <li><a href="#">版型主題</a></li>
+                            <li><a href="#">新手問答</a></li>
+                            <li><a href="#">POS硬體</a></li>
+                            <li><a href="#">最新功能</a></li>
                         </ul>
                     </div>
                     <div class="footercol">
                         <h4>更多解決方案</h4>
                         <ul>
-                            <li><a href="">企業旗艦方案</a></li>
-                            <li><a href="">跨境電商方案</a></li>
-                            <li><a href="">廣告計劃方案</a></li>
+                            <li><a href="#">企業旗艦方案</a></li>
+                            <li><a href="#">跨境電商方案</a></li>
+                            <li><a href="#">廣告計劃方案</a></li>
                         </ul>
                     </div>
                     <div class="footercolspecial">
                         <h4>其他資源</h4>
                         <ul>
-                            <li><a href="">電商教室</a></li>
-                            <li><a href="">充電工作坊</a></li>
-                            <li><a href="">DreamBig創品牌</a></li>
-                            <li><a href="">電商成長學苑</a></li>
-                            <li><a href="">SHOPLINE TRENDS 電商數據庫</a></li>
-                            <li><a href="">LINE 官方帳號</a></li>
+                            <li><a href="#">電商教室</a></li>
+                            <li><a href="#">充電工作坊</a></li>
+                            <li><a href="#">DreamBig創品牌</a></li>
+                            <li><a href="#">電商成長學苑</a></li>
+                            <li><a href="#">SHOPLINE TRENDS 電商數據庫</a></li>
+                            <li><a href="#">LINE 官方帳號</a></li>
                         </ul>
                     </div>
                     <div class="footercol">
                         <h4>應用案例</h4>
                         <ul>
-                            <li><a href="">SHOPLINE Payments</a></li>
-                            <li><a href="">網紅口碑行銷方案</a></li>
-                            <li><a href="">實體零售</a></li>
-                            <li><a href="">IG直播+1</a></li>
-                            <li><a href="">社群電商工具包</a></li>
+                            <li><a href="#">SHOPLINE Payments</a></li>
+                            <li><a href="#">網紅口碑行銷方案</a></li>
+                            <li><a href="#">實體零售</a></li>
+                            <li><a href="#">IG直播+1</a></li>
+                            <li><a href="#">社群電商工具包</a></li>
                         </ul>
                     </div>
                 </div>
             </div>
             <div class="C19">
                 <div class="COVID-19">
-                    <a href="">COVID-19應變措施</a>
+                    <a href="#">COVID-19應變措施</a>
                 </div>
             </div>
             <div class="footerbom">
