--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
     <ul>
         <li><a href="https://linyign.github.io/hw1.html">作業一 課表作業</a> </li>
         <li><a href="https://linyign.github.io/HW2/hw2.html">作業二  SHOPLINE 切版作業</a> </li>
-        <li><a href="">作業三 </a></li>
-        <li><a href="">作業四 </a></li>
-        <li><a href="">作業五 </a></li>
+        <li><a href="https://linyign.github.io/HW3/position.html">作業三 Toyota 切版作業(position)</a></li>
+        <li><a href="https://linyign.github.io/HW3/grid.html">作業四 Toyota 切版作業(Grid)</a></li>
+        <li><a href="https://linyign.github.io/JavaScript/introduction.html">作業五 自我介紹</a></li>
         <li><a href="">作業六 </a></li>
     </ul>
 </body>
