--- a/HW6/LOL.html
+++ b/HW6/LOL.html
@@ -2184,7 +2184,7 @@
                 lol.forEach((hero,index)=>{
                     let number=index;
                     let id=hero.querySelector(".card-title").innerText;
-                    let text=hero.querySelector(".card-text").inneText;
+                    let text=hero.querySelector(".card-text").innerText;
                     let url=hero.querySelector(".card-img-top").src;
                     let man={
                         "index":number,
