--- a/HW7/LOL.html
+++ b/HW7/LOL.html
@@ -77,7 +77,7 @@
         <button class="btn btn-primary" id="tablehero">以表格呈現英雄人物資料</button>
     </div>
     <div id="result"></div>
-    <div id="container" class="row">
+    <div id="container" class="row m-auto">
         <div class="col-xl-3 col-lg-4 col-md-6 col-sm-12" card-index="1">
             <div class="card" id="Aatrox">
                 <div class="headshot"> <img class="card-img-top"
@@ -2232,6 +2232,7 @@
                 document.querySelector("#container").innerHTML = "";
 
                 table=document.createElement('table');
+                table.setAttribute("class", "table table-bordered  table-hover");
                 
                 thead=document.createElement('thead');
                 let theadtr=document.createElement('tr');
